--- a/dotnet8/src/BlogBlazorApp/Components/_Imports.razor
+++ b/dotnet8/src/BlogBlazorApp/Components/_Imports.razor
@@ -6,6 +6,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using BlogBlazorApp
-@using BlogBlazorApp.Client
-@using BlogBlazorApp.Components
+@using DotnetSamples.BlogBlazorApp
+@using DotnetSamples.BlogBlazorApp.Client
+@using DotnetSamples.BlogBlazorApp.Components
