Implement MongoDB lib

--- a/dotnet8/src/BlogBlazorApp/Components/Pages/Error.razor
+++ b/dotnet8/src/BlogBlazorApp/Components/Pages/Error.razor
@@ -6,8 +6,7 @@
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
-@if (ShowRequestId)
-{
+@if (ShowRequestId) {
     <p>
         <strong>Request ID:</strong> <code>@RequestId</code>
     </p>
@@ -24,7 +23,7 @@
     and restarting the app.
 </p>
 
-@code{
+@code {
     [CascadingParameter]
     private HttpContext? HttpContext { get; set; }
 
