--- a/dotnet8/src/BlogBlazorApp/Components/Pages/Weather.razor
+++ b/dotnet8/src/BlogBlazorApp/Components/Pages/Weather.razor
@@ -7,12 +7,9 @@
 
 <p>This component demonstrates showing data.</p>
 
-@if (forecasts == null)
-{
+@if (forecasts == null) {
     <p><em>Loading...</em></p>
-}
-else
-{
+} else {
     <table class="table">
         <thead>
             <tr>
